--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -23,8 +27,10 @@ a:hover {
 }
 
 body {
-  max-width: 1920px;
-  max-height: 1080px;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   margin: 0;
   display: flex;
